<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@drawable/download"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:layout_marginBottom="0dp"
        app:cornerRadius="16dp"
        android:background="@drawable/custom_edittext"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/signup_Title"
            android:textSize="36sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>


        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="text"
            android:hint="@string/username"
            android:layout_marginTop="40dp"
            android:background="@drawable/custom_edittext"
            android:drawableStart="@drawable/baseline_person_24"
            android:textSize="24sp"
            android:layout_gravity="center"
            android:padding="8dp"
            android:textColorHint="@color/white"
            />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:layout_marginTop="40dp"
            android:background="@drawable/custom_edittext"
            android:drawableStart="@drawable/baseline_email_24"
            android:textSize="24sp"
            android:layout_gravity="center"
            android:padding="8dp"
            android:textColorHint="@color/white"
            />

        <EditText
            android:id="@+id/phoneNo"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="phone"
            android:hint="@string/phoneNo"
            android:layout_marginTop="40dp"
            android:background="@drawable/custom_edittext"
            android:drawableStart="@drawable/baseline_phone_24"
            android:textSize="24sp"
            android:layout_gravity="center"
            android:padding="8dp"
            android:textColorHint="@color/white"
            />

        <EditText
            android:id="@+id/password1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:layout_marginTop="40dp"
            android:background="@drawable/custom_edittext"
            android:drawableStart="@drawable/baseline_lock_24"
            android:textSize="24sp"
            android:layout_gravity="center"
            android:padding="8dp"
            android:textColorHint="@color/white"
            />

        <EditText
            android:id="@+id/password2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:hint="@string/password2"
            android:layout_marginTop="40dp"
            android:background="@drawable/custom_edittext"
            android:drawableStart="@drawable/baseline_lock_24"
            android:textSize="24sp"
            android:layout_gravity="center"
            android:padding="8dp"
            android:textColorHint="@color/white"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingTop="40dp">

            <Button
                android:id="@+id/signupBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup_Title"
                android:layout_marginTop="0dp"
                android:textSize="18sp"
                android:background="@drawable/custom_edittext"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="30dp"
                android:padding="8dp"
                android:gravity="center"
                android:textStyle="bold"
                android:backgroundTint="@color/purple"
                android:textColor="@color/white"
                app:cornerRadius="30dp"
                />

            <Button
                android:id="@+id/cancelBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:layout_marginTop="0dp"
                android:textSize="18sp"
                android:background="@drawable/custom_edittext"
                android:padding="8dp"
                android:textStyle="bold"
                android:backgroundTint="@color/red"
                android:textColor="@color/white"
                app:cornerRadius="30dp"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:focusable="true"
            android:text="@string/loginText"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:clickable="true"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/output"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="24sp"
            android:text=""
            android:textColor="@color/white"
            android:visibility="gone"/>

        <!--<TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="24sp"
            android:text="@string/signup_Title"
            android:textColor="@color/black"
            />-->



    </LinearLayout>
</LinearLayout>
