<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@drawable/main"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_margin="24dp"
        android:background="@drawable/custom_edittext"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/login"
            android:textSize="36sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>


        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="text"
            android:hint="@string/username"
            android:layout_marginTop="40dp"
            android:background="@drawable/custom_edittext"
            android:drawableStart="@drawable/baseline_person_24"
            android:textSize="24sp"
            android:layout_gravity="center"
            android:padding="8dp"
            android:autofillHints="username"
            android:textColorHint="@color/white"
            />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:layout_marginTop="40dp"
            android:background="@drawable/custom_edittext"
            android:drawableStart="@drawable/baseline_lock_24"
            android:textSize="24sp"
            android:layout_gravity="center"
            android:padding="8dp"
            android:autofillHints="password"
            android:textColorHint="@color/white"
            />

        <TextView
            android:id="@+id/forgot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:focusable="true"
            android:text="@string/forgot"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:gravity="start"
            android:clickable="true"
            android:textColor="@color/purple"/>

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:text="@string/login"
            android:padding="8dp"
            android:textSize="24sp"
            android:gravity="center"
            android:background="@drawable/custom_edittext"
            android:backgroundTint="@color/purple"
            app:cornerRadius="2dp"
            android:textColor="@color/white"
            />

        <TextView
            android:id="@+id/signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:focusable="true"
            android:text="@string/signup"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:clickable="true"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/output"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="24sp"
            android:text=""
            android:textColor="@color/white"
            android:visibility="gone"/>


    </LinearLayout>


</LinearLayout>