<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@drawable/forgot"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_margin="24dp"
        android:background="@drawable/custom_edittext"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/accountTitle"
            android:textSize="36sp"
            android:textStyle="bold"
            android:padding="8dp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:focusable="true"
            android:text="@string/emPhone"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/white"/>


        <EditText
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="text"
            android:hint="@string/search"
            android:layout_marginTop="40dp"
            android:background="@drawable/custom_edittext"
            android:drawableStart="@drawable/baseline_search_icon"
            android:textSize="24sp"
            android:layout_gravity="center"
            android:padding="8dp"
            android:textColorHint="@color/white"
            />


        <Button
            android:id="@+id/searchBtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:text="@string/search"
            android:padding="8dp"
            android:textSize="24sp"
            android:gravity="center"
            android:background="@drawable/custom_edittext"
            android:backgroundTint="@color/purple"
            app:cornerRadius="2dp"
            android:textColor="@color/white"
            />



        <TextView
            android:id="@+id/output"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="24sp"
            android:text=""
            android:textColor="@color/white"
            android:visibility="gone"/>


        <Button
            android:id="@+id/backLogin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:text="@string/backLogin"
            android:padding="8dp"
            android:textSize="24sp"
            android:gravity="center"
            android:background="@drawable/custom_edittext"
            android:backgroundTint="@color/red"
            app:cornerRadius="2dp"
            android:textColor="@color/white"
            android:visibility="gone"
            />


    </LinearLayout>


</LinearLayout>